# picocom-dpdk

./: .gitignore  .gitlab-ci.yml  GNUmakefile  README.md  build_docs.sh  meson_options.txt
.ci/: build_docs.sh  gen_package.sh
.ci/pc802_files/: logrotate.pc802  npu_run.sh  pc802_show.sh
app/: Makefile  meson.build
app/pcom-log/: main.c  meson.build  pico_mb.c  pico_mb.h
app/pico-log/: main.c  meson.build  pico_log.c  pico_log.h  pico_mb.c  pico_mb.h
app/review-pc802/: check-pc802.c  meson.build
app/test-pc802/: cmdline.c  meson.build  testpc802.c
app/test-pc802-coredump/: meson.build  testpc802.c
app/test-pc802-mp/: meson.build  testpc802-2nd.c
app/test-pc802-mp/pri-eth/: cmdline.c  meson.build  test-pc802-eth.c
app/test-pc802-mp/sec-cell-1/: meson.build  test-pc802-cell-1.c
app/test-pc802-mp/sec-cell-2/: meson.build  test-pc802-cell-2.c
app/test-pc802-mp/sec-oam/: cmdline.c  meson.build  test-pc802-oam.c
app/test-pc802-nr-phy/: cmdline.c  meson.build  testpc802.c
app/test-pc802-perf/: cmdline.c  meson.build  readme.md  testperf.c
app/test-pc802oam/: cmdline.c  ecpri_oam_inf.h  oam.go  testoam.c
app/test-pico-bha/: cmdline.c  crypto_dev.c  meson.build  pcap_mode.c  tap_mode.c  test_bha.c  test_bha.h
app/test-pico-bha/files_pcap/: ecpri_20_pkts.pcap  ecpri_jumbo_20_pkts.pcap
app/test-pico-bha/ipsec_gw/: aes256_gcm_inbound_ipv4_tran.cfg  aes256_gcm_inbound_ipv4_tun.cfg  aes256_gcm_outbound_ipv4_tran.cfg  aes256_gcm_outbound_ipv4_tun.cfg  ipsec_gw_esp_transport_1pkt.pcap  ipsec_gw_esp_transport_nonlibipsec_1pkt.pcap  ipsec_gw_esp_tunnel_1pkt.pcap  ipsec_gw_esp_tunnel_nonlibipsec_1pkt.pcap  udp_192_168_105_0_1pkt_60B.pcap
app/test-sec/: meson.build  sec_cryptodev.c
buildtools/: gen-pmdinfo-cfile.py
cmake/: version.cmake
config/: common_base  rte_config.h
config/x86/: meson.build
doc/_static/css/: custom.css
doc/custom-doxygen/: customdoxygen.css  footer.html  mainpage.md
doc/guides/picodevs/: CMakeLists.txt  FindSphinx.cmake  picoos.doxyfile.in
doc/guides/picodevs/custom-doxygen/: header.html
doc/guides/picodevs/source/: conf.py.in  gettingstart.rst  index.rst  introduction.rst
doc/guides/picodevs/source/kernelspace/: config.rst  fs.rst  guide.rst  index.rst
doc/guides/picodevs/source/releases/: index.rst  release-notes-2.0.rst  release-notes-3.0.rst
doc/guides/picodevs/source/userspace/: HowTo_Guides.rst  compile.rst  howto.rst  index.rst  program_guide.rst  system.rst
doc/guides/picodevs/source/userspace/atll/: atll.rst  index.rst
doc/guides/picodevs/source/userspace/oam/: index.rst  oam.rst
doc/guides/picodevs/source/userspace/pcie/: PCIe_driver.rst  index.rst
doc/guides/picodevs/source/userspace/releases/: release-notes-1.4.rst
doc/source/: conf.py.in  introduction.rst
doc/source/kernelspace/: config.rst  fs.rst  guide.rst
doc/source/userspace/: compile.rst  index.rst
doc/source/userspace/atll/: atll.rst  index.rst
doc/source/userspace/pcie/: PCIe_driver.rst  index.rst  sample.rst
doc/source/userspace/samples/: index.rst  running.rst
drivers/crypto/: meson.build
drivers/crypto/pico_sec/: meson.build  psec_cryptodev.c  psec_cryptodev.h  psec_cryptodev_ops.c  psec_log.h
drivers/net/: Makefile  meson.build
drivers/net/pc802/: Makefile  meson.build  pc802_atl.h  pc802_ethdev.c  pc802_ethdev.h  pc802_kni.c  pc802_logs.c  pc802_logs.h  pc802_mailbox.c  pc802_mailbox.h  pc802_oam_lib.c  pc802_oam_lib.h  pc802_pdump.c  pcxx_ipc.c  pcxx_ipc.h  pcxx_oam.c  pcxx_oam.h  reset_pc802_from_gpio.sh  rte_pmd_pc802.h  version  version.map
drivers/net/pico_bha/: bha_ethdev.c  bha_ethdev.h  bha_log.h  bha_rxtx.c  bha_rxtx.h  meson.build  readme.txt  rte_pmd_bha.h
linux/: scb_patch_flexbuild_lsdk2108.tgz
linux/gps/: gps_parse.c
linux/gps/app/: Makefile  Makefile.inc  gps.c  portserial.c
linux/patch/: atf.patch  flexbuild_lsdk2108.patch  linux-add-10G.patch  linux.patch  rcw.patch  readme.txt  uboot.patch
linux/rfic/adrv9025/src/c_src/app/example/: makefile  makefile.bak
linux/rfic/adrv9025/src/c_src/boards/daughterboards/: adi_daughterboard_trx_types.h
linux/rfic/adrv9025/src/c_src/boards/motherboards/: adi_motherboard_trx.c
linux/rfic/adrv9025/src/c_src/common/: makefile
linux/rfic/adrv9025/src/c_src/common/adi_error/: adi_common_error.h
linux/rfic/adrv9025/src/c_src/devices/adrv9025/: makefile
linux/rfic/adrv9025/src/c_src/devices/share_utils/: adi_device_share.c  adi_fpga_tdd_types.h
linux/rfic/adrv9029/src/c_src/app/example/: initdata.c
linux/rfic/adrv9029/src/c_src/boards/: makefile
linux/rfic/adrv9029/src/c_src/common/: adi_common.h  adi_common_macros.h  adi_common_types.h  adi_common_user.h
minmea/: gps.c  main.c  portserial.c  portserial.h
minmea/app/: gps  portserial.h  t.sh
mk/: rte.app.mk
pcie/user_space/DPDK/app/: meson.build
pcie/user_space/DPDK/app/test-pc802/: Makefile  cmdline.c  meson.build  testpc802.c
pcie/user_space/DPDK/app/test-pc802-perf/: testpc802.c  testperf.c
pcie/user_space/DPDK/app/test-pc802oam/: cmdline.c  meson.build  testoam.c
pcie/user_space/DPDK/drivers/net/: meson.build
pcie/user_space/DPDK/drivers/net/pc802/: Makefile  meson.build  pc802_atl.c  pc802_atl.h  pc802_common.h  pc802_ethdev.c  pc802_ethdev.h  pc802_logs.c  pc802_oam_lib.c  pc802_oam_lib.h  pcxx_ipc.c  rte_pmd_pc802.h  rte_pmd_pc802_version.map
pcie/user_space/config/: rsyslog.pc802.conf
pcie/user_space/release/: Picocom-PC802-PCIe-UDriver-based-on-DPDK-21.08.patch
rfic/adrv9025/src/c_src/app/example/: initdata.h  main.c
rfic/adrv9025/src/c_src/boards/daughterboards/: adi_daughterboard_trx_dev.c
rfic/adrv9025/src/c_src/boards/motherboards/: adi_motherboard_trx_types.h
rfic/adrv9025/src/c_src/common/adi_error/: adi_common_error.c
rfic/adrv9025/src/c_src/common/adi_hal/: adi_common_hal.h
rfic/adrv9025/src/c_src/common/adi_logging/: adi_common_log_types.h
script/: gen_package.sh  gen_patch.sh  npu_run.sh  pc802_bar0.sh  pc802_show.sh
usertools/: meson.build  pcie_reboot_pc802.sh  reset_evb_pc802.sh  reset_pc802_from_gpio.sh  test_reset_evb_pc802.sh
(+369 files in other folders)
